Fixed styling on small devices

--- a/style.css
+++ b/style.css
@@ -252,12 +252,10 @@ h1 {
 .people_container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   margin-right: 20%;
   margin-top: 20px;
   overflow-y: scroll;
-  padding-top: 160px;
 }
 
 .icons {
